
    HDFS-9395. Make HDFS audit logging consistant (Kuhu Shukla via kihwal)

    HDFS-9048. DistCp documentation is out-of-dated
    (Daisuke Kobayashi via iwasakims)

    HDFS-9860. Backport HDFS-9638 to branch-2.7. (Wei-Chiu Chuang via aajisaka)

    HDFS-8101. DFSClient use of non-constant DFSConfigKeys pulls in WebHDFS
    classes at runtime. (Sean Busbey via atm)

  OPTIMIZATIONS

    HDFS-8845. DiskChecker should not traverse the entire tree (Chang Li via
    Colin P. McCabe)

  BUG FIXES

    HDFS-9289. Make DataStreamer#block thread safe and verify genStamp in
    commitBlock. (Chang Li via kihwal)

    HDFS-4937. ReplicationMonitor can infinite-loop in 
    BlockPlacementPolicyDefault#chooseRandom(). (kihwal)

    HDFS-9383. TestByteArrayManager#testByteArrayManager fails.
    (szetszwo via kihwal)

    HDFS-9072. Fix random failures in TestJMXGet (J.Andreina via kihwal)

    HDFS-6481. DatanodeManager#getDatanodeStorageInfos() should check the
    length of storageIDs. (szetszwo via Arpit Agarwal)

    HDFS-9313. Possible NullPointerException in BlockManager if no excess
    replica can be chosen. (mingma)

    HDFS-9314. Improve BlockPlacementPolicyDefault's picking of excess
    replicas. (Xiao Chen via zhz)

    HDFS-9516. Truncate file fails with data dirs on multiple disks.
    (Plamen Jeliazkov via shv)

    HDFS-9533. seen_txid in the shared edits directory is modified during
    bootstrapping (kihwal)

    HDFS-9505. HDFS Architecture documentation needs to be refreshed.
    (Masatake Iwasaki via aajisaka)

    HDFS-8914. Document HA support in the HDFS HdfsDesign.md.
    (Lars Francke via wheat9)

    HDFS-9198. Coalesce IBR processing in the NN. (Daryn Sharp via umamahesh)

    HDFS-9648. TestStartup.testImageChecksum is broken by HDFS-9569's message
    change. (Wei-Chiu Chuang via Yongjun Zhang)

    HDFS-9661. Deadlock in DN.FsDatasetImpl between moveBlockAcrossStorage and
    createRbw (ade via vinayakumarb)
